Changed fucked up ids

--- a/public/index.html
+++ b/public/index.html
@@ -421,16 +421,16 @@
               <div id="newDrinkerFormCheck" class="modalFormHidden">
                 <form id="newDrinkerCheckInForm">
                   <div class="form-group">
-                    <label for="inputName">Full Name</label>
-                    <input type="text" class="form-control" id="inputName" placeholder="Enter your Full Name">
+                    <label for="inputName2">Full Name</label>
+                    <input type="text" class="form-control" id="inputName2" placeholder="Enter your Full Name">
                   </div>
                   <div class="form-group">
-                    <label for="inputAge">Age</label>
-                    <input type="text" class="form-control" id="inputAge" placeholder="Enter your age">
+                    <label for="inputAge2">Age</label>
+                    <input type="text" class="form-control" id="inputAge2" placeholder="Enter your age">
                     <br>
-                    <label for="inputGender">Gender</label>
+                    <label for="inputGender2">Gender</label>
                     <br>
-                    <select id="inputGender" class="allGenders" name="genders[]" value="Select your gender" style="width:100%">
+                    <select id="inputGender2" class="allGenders" name="genders[]" value="Select your gender" style="width:100%">
                       <optgroup label="Select your gender!">
                         <option value="1">Male</option>
                         <option value="0">Female</option>
@@ -439,16 +439,16 @@
                     </select>
                   </div>
                   <div class="form-group">
-                    <label for="inputCity">City</label>
-                    <input type="text" class="form-control" id="inputCity" placeholder="City">
+                    <label for="inputCity2">City</label>
+                    <input type="text" class="form-control" id="inputCity2" placeholder="City">
                   </div>
                   <div class="form-group">
-                    <label for="inputZip">Zip Code</label>
-                    <input type="text" class="form-control" id="inputZip" placeholder="Zipcode">
+                    <label for="inputZip2">Zip Code</label>
+                    <input type="text" class="form-control" id="inputZip2" placeholder="Zipcode">
                   </div>
                   <div class="form-group">
-                    <label for="inputState">State</label><br>
-                    <select id="inputState" class="allStates" name="states[]" value="Select your state" style="width:100%">
+                    <label for="inputState2">State</label><br>
+                    <select id="inputState2" class="allStates" name="states[]" value="Select your state" style="width:100%">
                       <optgroup label="Select your state!">
                         <option value="AL">Alabama</option>
                         <option value="AK">Alaska</option>
