--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
                     </div>
                   </div>
                 </div>
-                <p style="font-size:1em;margin-top:-23px;margin-left:140px;">{{x.totalRatings}} Total Ratings</p>
+                <p style="font-size:1em;margin-top:-23px;margin-left:140px;">{{x.numRatings}} Total Ratings</p>
               </div>
               <h4>Attire: {{x.attire}} | Capacity: {{x.capacity}}</h4>
               <h4>Typical Crowd: {{x.typicalCrowd}}</h4>
