--- a/public/index.html
+++ b/public/index.html
@@ -109,8 +109,8 @@
 
           <div class="col-lg-6" id="searchBarsHover" ng-submit="submit()">
             <form id="mainSearchForm" href="searchResults">
-              <input id="mainSearchBar" type="text" ng-model="mainSearch" name="mainSearch" class="form-control" placeholder="Search for a bar (Ex: ">
-              <input id="mainSearchBar2" type="text" class="form-control" placeholder="Near this (Ex. City, State, Zip)">
+              <input id="mainSearchBar" type="text" ng-model="mainSearch" name="mainSearch" class="form-control" placeholder="Search for a bar (Ex: Golden Rail Pub) ">
+              <input id="mainSearchBar2" type="text" class="form-control" placeholder="OR City Name (Ex: New York)">
               <input type="submit" hidden="true">
             </form>
           </div>
