--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
               <!--<form id="mostPopularSearchForm" href="searchResults" class="modalFormHidden">-->
                 <!--<input id="mostPopularSearch" type="text" class="form-control" placeholder="Enter Your City">-->
               <!--</form>-->
-              <div id ="topResultsSpinner" class="modalFormHidden" >
+              <div id ="topResultsSpinner" class="modalFormHidden" style="margin-top:2%;" >
                 <i style="color:white;" class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
               </div>
             </div>
@@ -214,10 +214,10 @@
             <div class="col-lg-3">
               <div>
                 <p style="float:left;">Status: </p>
-                <p ng-if="x.isOpen == 1" style="color: green;float:left;">Open </p>
-                <p ng-if="x.isOpen == 0" style="color: red;float:left;">Closed </p>
+                <p ng-if="x.isOpen == 1" style="color: green;float:left;"> Open </p>
+                <p ng-if="x.isOpen == 0" style="color: red;float:left;"> Closed </p>
                 <p ng-if="x.isHappyHour == 1" style="float:left;">|</p>
-                <p ng-if="x.isHappyHour == 1" style="color:green;float:left;">Happy Hour</p>
+                <p ng-if="x.isHappyHour == 1" style="color:green;float:left;"> Happy Hour</p>
                 <br>
               </div>
               <br>
