--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -164,7 +164,7 @@
         <h2 style="text-align:center;">Ratings Detailed Information</h2>
         <table ng-table="ratingsTable" class="ratingsTable">
           <tr ng-repeat="r in data">
-            <td data-title="'Drinker'" sortable="'drinkerId'" filter="{ 'drinkerName': 'text' }" style="width:50%">
+            <td data-title="'Drinker'" sortable="'drinkerId'" filter="{ 'name': 'text' }" style="width:50%">
               {{r.name}} - {{r.drinkerId}}
             </td>
             <td data-title="'Rating'" sortable="'rating'" style="width:20%" filter="{ 'rating': 'number' }">
